# pnpm-rust

./: Cargo.toml  README.md  lib.rs  pnpm-output.txt
crates/cli_utils/: Cargo.toml
crates/fetch/: Cargo.toml
crates/find_workspace_packages/: Cargo.toml
crates/find_workspace_packages/src/: find_packages.rs  lib.rs
crates/get_context/: Cargo.toml
crates/hosted_git_info/src/: lib.rs
crates/lockfile_utils/src/: git_merge_file.rs  satisfies_package_manifest.rs  write.rs
crates/parse_wanted_dependency/src/: lib.rs
crates/pnpm_core/: Cargo.toml
crates/pnpm_core/src/: lib.rs
crates/pnpm_core/src/install/: extend_install_options.rs
crates/project/src/: lib.rs
crates/resolvers/: Cargo.toml
crates/resolvers/fixtures/package/: package.json
crates/resolvers/src/: base.rs  default.rs  lib.rs  tarball.rs
crates/resolvers/src/git/: mod.rs  parse_pref.rs
crates/sort_packages/: Cargo.toml
crates/sort_packages/src/: lib.rs
crates/store_connection_manager/: Cargo.toml
crates/store_connection_manager/src/: create_new_store_controller.rs  lib.rs
crates/store_controller_types/: Cargo.toml
crates/store_path/: Cargo.toml
crates/temp_path/: Cargo.toml
crates/types/: Cargo.toml
src/: install_deps.rs  main.rs  recursive.rs
src/commands/: add.rs  install.rs
