[package]
name = "pnpm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
types = { path = "./packages/types" }
find_workspace_packages = { path = "./packages/find_workspace_packages" }
relative-path = "1.6.0"
sort_packages = { path = "./packages/sort_packages" }
project = { path = "./packages/project" }
read_project_manifest = { path = "./packages/read_project_manifest" }
cli_utils = { path = "./packages/cli_utils" }
anyhow = "1.0.53"

[workspace]
members = [
    "packages/*"
]
