[package]
name = "pnpm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
types = { path = "./crates/types" }
find_workspace_packages = { path = "./crates/find_workspace_packages" }
relative-path = "1.6.0"
sort_packages = { path = "./crates/sort_packages" }
project = { path = "./crates/project" }
read_project_manifest = { path = "./crates/read_project_manifest" }
cli_utils = { path = "./crates/cli_utils" }
anyhow = "1.0.53"
rayon = "1.5.1"

[workspace]
members = [
    "crates/*"
]
