[package]
name = "store_controller_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resolvers = { path = "../resolvers" }
log = "0.4.14"
anyhow = "1.0.53"
store_path = { path = "../store_path" }